rss-cart-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-cart-service
spec:
  selector:
    app: rss-cart-service
  ports:
    - name: http
      protocol: TCP
      port: 9999
      targetPort: 9999
